# CustomThirdparty

./: .gitmodules  CMakeLists.txt  README.md
GTest/: CMakeLists.txt
cmake/: FindCustomThirdparty.cmake  SimpleArgsParser.cmake  SimpleLogger.cmake  Utils.cmake
